# robot_descriptions

./: .gitmodules  README.deb.md  README.md
humanoid/Ai2Robotics/ai2_bot2_description/: CMakeLists.txt  README.md  package.xml
humanoid/Ai2Robotics/ai2_bot2_description/config/nav2/: nav2_params_isaac_gt.yaml
humanoid/Ai2Robotics/ai2_bot2_description/config/ocs2/: gripper_inspire.info  split.info  split_inspire.info  target_manager.yaml  task.info
humanoid/Ai2Robotics/ai2_bot2_description/config/ros2_control/: inspire.yaml  ros2_controllers.yaml
humanoid/Ai2Robotics/ai2_bot2_description/urdf/: Bot2_ZPF_L2Fgripper_R2Fgripper.urdf  ai2_bot2.urdf  ai2_bot2_inspire.urdf
humanoid/Ai2Robotics/ai2_bot2_description/xacro/: component.xacro  robot.xacro
humanoid/Ai2Robotics/ai2_bot2_description/xacro/components/: arm.xacro  body.xacro  chassis.xacro
humanoid/Ai2Robotics/ai2_bot2_description/xacro/ros2_control/: arm.xacro  body.xacro  robot.xacro
humanoid/Galbot/galbot_one_description/: CMakeLists.txt  README.md  package.xml
humanoid/Galbot/galbot_one_description/config/ocs2/: fixed_base.info  task.info
humanoid/Galbot/galbot_one_description/config/ros2_control/: ros2_controllers.yaml
humanoid/Galbot/galbot_one_description/config/rviz/: fullbody.rviz
humanoid/Galbot/galbot_one_description/urdf/: galbot_one.urdf
humanoid/Galbot/galbot_one_description/xacro/: component.xacro  gripper.xacro  robot.xacro
humanoid/X2Robot/quanta_x1_description/: CMakeLists.txt  README.md  package.xml
humanoid/X2Robot/quanta_x1_description/urdf/: ex001_robot.urdf  ex001_robot_mock.urdf
humanoid/X2Robot/quanta_x1_description/xacro/: component.xacro  robot.xacro
(+411 files in other folders)
