<package format="2">
  <name>galbot_one_description</name>
  <version>1.0.0</version>
  <description>URDF/Xacro description package for Galbot One.</description>

  <maintainer email="todo@example.com">TODO</maintainer>
  <license>BSD</license>

  <exec_depend>robot_common_launch</exec_depend>
  <exec_depend>component_models</exec_depend>
  <exec_depend>sensor_models</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
