<?xml version="1.0"?>
<package format="2">
	<name>quanta_x1_description</name>
	<version>0.0.0</version>
	<description>The Ai2 Bot2 description package</description>

	<maintainer email="biao876990970@hotmail.com">Huang Zhenbiao</maintainer>
	<license>TODO</license>

	<exec_depend>robot_common_launch</exec_depend>
	<depend>rm75_description</depend>
	<depend>sensor_models</depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>

</package>
